[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/helm.gd" type="Script" id=1]
[ext_resource path="res://assets/ults/helm.png" type="Texture" id=2]
[ext_resource path="res://assets/ults/untitled.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/SFX/clang.wav" type="AudioStream" id=4]

[node name="helm" type="Node2D" groups=[
"ult",
]]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D/Sprite"]
self_modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
z_index = -2
texture = ExtResource( 3 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -1.89471, -125.265, -38.7368, -105.265, -66.1053, -68.4233, -76.6316, -24.2128, -72.4211, -3.16016, -70.3158, 24.2083, -85.0526, 35.7872, -58.7368, 88.4188, -20.8421, 123.156, -17.6842, 62.103, 0.0400238, 66.9521, 0.0400238, 51.3465, -34.5263, 39.9977, -50.3158, -9.47595, -29.2632, -51.5812, -1.89471, -76.8444, 25.4737, -55.7917, 43.3684, -12.6339, 32.8421, 42.103, -1.42299, 45.0067, -21.9053, 42.0807, -8.21051, 69.4714, 0.0400238, 68.9028, 18.1053, 68.4188, 16, 122.103, 57.0527, 90.524, 81.2632, 36.8398, 66.5263, 21.0504, 76, -17.897, 65.4737, -65.2654, 43.3684, -100.002 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimeOut" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeOut" to="." method="_on_TimeOut_timeout"]
